fix link colors & stretching in Safari

--- a/src/Resume.css
+++ b/src/Resume.css
@@ -63,3 +63,7 @@
 .active {
   border-style: none;
 }
+
+a:focus  {
+  outline: 0;
+}
